# WallyHaze

./: .gitignore  BUILD_COMPLETE.md  CMakeLists.txt  GITHUB_RELEASE_INSTRUCTIONS.md  LICENSE.txt  PROJECT_CLEANUP_SUMMARY.md  README.md  WINDOWS_BUILD.md  build_appimage.sh  build_release.sh  build_windows.sh  github_release.md  prepare_github_release.sh  set_kde_lockscreen.sh  toolchain-mingw64.cmake  wallyhaze-installer.nsi  wallyhaze.appdata.xml  wallyhaze.desktop
WallyHaze-Windows-1.0.0/: KDE_LOCKSCREEN_SETUP.md  README-Windows.txt  WallyHaze.bat
releases/v1.0.0/: BUILD_SUMMARY.md  RELEASE_NOTES.md  checksums.sha256
src/: ImageCache.cpp  ImageCache.h  MainWindow.cpp  MainWindow.h  WallhavenAPI.cpp  WallhavenAPI.h  WallpaperDialog.cpp  WallpaperDialog.h  WallpaperGrid.cpp  WallpaperGrid.h  WallpaperItem.cpp  WallpaperItem.h  main.cpp
